css/style.css
@import url('https://fonts.googleapis.com/css?family=Niconne&display=swap');
@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700&display=swap');

html, body, header, .view {   
  height: 100%;  
  font-family: "Libre+Baskerville", sans-serif;
  font-size: 16px;
  color: #3d6473;
}

body {
    margin-right: 0;
}

.intro-2 {    
    background: linear-gradient(rgba(20,20,20,0.3), rgba(20,20,20,0.5)), url("../assets/images/reflections5-hero.jpg") no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    position: relative;
}

.intro-padding {
    padding-top: 150px;
}

.view-2 {
    background: linear-gradient(rgba(20,20,20,0.3), rgba(20,20,20,0.8)), url("../assets/images/county-kerry.jpg") no-repeat center center;
    background-size: cover;
    background-attachment: fixed;
}

.view-3 {
    background: linear-gradient(rgba(20,20,20,0.5), rgba(20,20,20,0.5)), url("../assets/images/reflections2.jpg") no-repeat center center;
    background-size: cover;
    background-attachment: fixed;    
}
.navbar {    
    background-color: #36454f;
    padding: 0;
}

.navbar-brand {
    font-family: "Niconne", sans-serif;
    font-size: 27px;
    color: #48a0c1;
    margin: 15px 10px 10px 15px;
}

.navbar-collapse {
    margin-left: 22px;
    padding-bottom: 5px;
    line-height: 1.5;
}

.fa-bars {
    color: #48a0c1;
    padding-top: 2px;    
}

.navbar-toggler {    
    float: right;
    text-align: right;
    margin: 15px 15px 10px 15px;
    padding: 5px;
    border: 0;
}

.nav-item {
    padding-bottom: 5px;
}

.nav-link {
    color: #48a0c1;    
}

.jumbotron {
    background-color: transparent;    
    margin-bottom: 0;
    padding: 0;   
    }

.jumbotron p {    
    line-height: 1.5;  
    margin-top: 110px;   
    color: white;  
}

h1, h3 {    
    color: white;  
}

h1 {
    text-transform: uppercase;
}

h3 {
    margin-bottom: 50px;
    line-height: 1.5;
}

.products {
    color: black;
    padding-top: 70px;
}

#form {
    font-size: 16px;      
    padding-top: 70px;   
}

.fa-ul {
    padding-top: 33px;
    font-size: 16px;
    margin-left: 0;    
    line-height: 2; 
    color: white;
}

.fa-li {
    position: relative;
    left: -0.5em;
    }

.who-where-what {   
    padding: 0;
    margin: 0;  
    }

.who-where-what-position {
    vertical-align: top;
    padding-left: 50px;
    }

.contact-form {
    list-style-type: none;
    padding-inline-start: 0px;    
    margin-bottom: 0;
}

#name, #email {
    margin-bottom: 10px;
    width: 100%;
}

#text {
    margin-bottom: 7px;
    width: 100%;
    }

#submit {
    margin-bottom: 4px;
}

textarea, label, input, h1, .fb-page {
    max-width: 100%;
    resize: none;
}

form p {
    color: white;
    font-weight: 400;
}

ul. button {
    width: 150px;
}

#Facebook {    
    padding-top: 48px;
}

#fb-container {
    padding-bottom: 48px;
    width: 100%;
}

label {
    padding-right: 2px;
    color: white;
}

.footer {        
    padding-top: 10px;   
    color: #48a0c1; 
    background-color: #36454f;    
}

.list-inline {
    padding-top: 10px;
    padding-bottom: 10px;
    margin-bottom: 0px;
}

.list-inline-item {    
    font-weight: 400;
}

.list-inline-item a {
    color: #48a0c1;
}

.list-inline-item:not(:last-child){
    margin-right: 5px;
}

.photo-1, .photo-2, .photo-3, .photo-4 {    
    padding: 5px;
    color: black;  
}

.div-about {
    padding-bottom: 48px;
}

#about {
    padding-top: 70px;    
}

.about-text {
    margin-top: 20px;
    }

#about p {                 
    text-align: left;  
    color: white;         
}

.fa-graduation-cap {
    font-size: 12px;
}

.fa-map-marker-alt {
    padding-right: 4px;
}

.fa-user {
    padding-right: 2px;
}

#image {
    border: 5px solid #36454f;
    float: left;
}

.block-divider {
    width: 100px;
    height: 5px;
    border: 0;
    background-color: #36454f;
}

.row-products {
  display: flex;
  padding-bottom: 24px;
  margin-right: 0px;
  margin-left: 0px;
}

.col-products {
  flex: 1;  
}

.col-products p {
    margin-top: 16px;
    margin-bottom: 0px;
}

.button {
  border-radius: 4px;
  background-color: #36454f;
  border: none;
  color: #48a0c1;
  text-align: center;
  font-size: 27px;  
  padding: 5px;
  width: 200px;  
  transition: all 0.5s;
  cursor: pointer;
  margin-bottom: 12px;
}

.button a {
    color: #48a0c1;
}

.button span {
  cursor: pointer;
  display: inline-block;
  position: relative;
  transition: 0.5s;
}

.button span:after {
  content: '\00bb';
  position: absolute;
  opacity: 0;
  top: 0;
  right: -20px;
  transition: 0.5s;
}

.button:hover span {
  padding-right: 25px;
}

.button:hover span:after {
  opacity: 1;
  right: 0;
}

/* Media queries */

@media only screen and (min-width: 1128px) {

.photo-4 {
    display: none;    
}

}

@media only screen and (min-width: 992px) and (max-width: 1010px) {

div .fb-page[data-width="500"] { width: 480px; }

}

@media only screen and (min-width: 992px) {

#about p {                 
    text-align: center;
    max-width: 100%;
    }

.form-margin {
    padding-right: 15px;
}

}

@media only screen and (min-width: 768px) {

.nav-item {
    margin-top: 20px;
}

.nav-item:not(:last-child) {
    margin-right: 20px;  
}

.intro-2 {    
    background: linear-gradient(rgba(20,20,20,0.3), rgba(20,20,20,0.5)), url("../assets/images/reflections2-hero-desktop.jpg") no-repeat center center;
    background-size: cover;
    background-attachment: fixed;
    position: relative;
}

.intro-padding {
    padding-top: 200px;
}

#Facebook {    
    padding-top: 0px;
}  

.view-2 {
    background: linear-gradient(rgba(20,20,20,0.3), rgba(20,20,20,0.8)), url("../assets/images/background.jpg") no-repeat center center;
    background-size: cover;
    background-attachment: fixed;
}

.view-3 {
    background: linear-gradient(rgba(20,20,20,0.5), rgba(20,20,20,0.5)), url("../assets/images/county-kerry.jpg") no-repeat center center;
    background-size: cover;
    background-attachment: fixed;}

}

@media only screen and (min-width: 750px) {

.photo-1, .photo-2, .photo-3, .photo-4 {
    margin-left: 3px;
    margin-right: 3px;
}

}

@media only screen and (min-width: 430px) and (max-width: 515px) {

div .fb-page[data-width="500"] { width: 400px; }

}

@media only screen and (min-width: 310px) and (max-width: 429px) {

div .fb-page[data-width="500"] { width: 290px; }

}

@media only screen and (max-width: 400px) {

.responsive-images {
  max-width: 100%;
  height: auto;
}

.photo-3, .photo-4 {
    display: none;    
}

}

